# GOL

./: .gitignore  CMakeLists.txt  Makefile  README  install.py  lenia.c  lenia.h  main.c  mandel.cpp  raffler.c  rafler.h  real_smooth.c  smoothlife.c  smoothlife.h  util_glfw.c  util_glfw.h
shaders/: pixel_screen.vert  simple.frag  smoothlife_update.frag  texture_render.frag  vertex_to_tex.vert
